# Reme

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Libraries/: CMakeLists.txt
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Reme/: CMakeLists.txt  Forward.h  Reme.h
Reme/Core/: Alias.h  Application.cpp  Application.h  Asset.cpp  Asset.h  Badge.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Logger.cpp  Logger.h  Window.cpp  Window.h
Reme/Debug/: Backtrace.cpp  Backtrace.h  Demangle.h  ExceptionHandler.cpp  ExceptionHandler.h  Instrumentor.h
Reme/Events/: ApplicationEvent.h  Event.h  Input.cpp  Input.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
Reme/GUI/: Node.cpp  Node.h  Sprite.cpp  Sprite.h
Reme/ImGui/: ImGuiBuild.cpp  ImGuiCommand.cpp  ImGuiCommand.h
Reme/Impl/: GLFW_Window.cpp  GLFW_Window.h
Reme/Impl/OpenGL/: OpenGL_Buffers.cpp  OpenGL_Buffers.h  OpenGL_RendererAPI.cpp  OpenGL_RendererAPI.h  OpenGL_Shader.cpp  OpenGL_Shader.h  OpenGL_Texture.cpp  OpenGL_Texture.h  OpenGL_VertexArray.cpp  OpenGL_VertexArray.h
Reme/Platform/: GLFW_Window.cpp
Reme/Platform/OpenGL/: OpenGL_Buffers.cpp  OpenGL_RendererAPI.cpp  OpenGL_RendererAPI.h  OpenGL_Shader.cpp  OpenGL_Shader.h  OpenGL_Texture.cpp  OpenGL_VertexArray.cpp
Reme/Renderer/: Buffers.cpp  Buffers.h  Camera.h  Color.cpp  Color.h  Image.cpp  Image.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderDataLayout.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Reme/Utility/: Utils.cpp
Sandbox/: CMakeLists.txt  Sandbox.cpp
Scripts/: refresh-qtcreator.sh
